@@ -23,7 +23,6 @@
 #define __GDM_XDMCP_MANAGER_H
 
 #include <glib-object.h>
-#include <dbus/dbus-glib.h>
 
 G_BEGIN_DECLS
 
