@@ -1,5 +1,11 @@
 2007-04-17  William Jon McCann  <mccann@jhu.edu>
 
+	* daemon/gdm-xdmcp-manager.c:
+	* daemon/gdm-xdmcp-manager.h:
+	Fix some includes issues from bug #376010.
+
+2007-04-17  William Jon McCann  <mccann@jhu.edu>
+
 	* daemon/verify-crypt.c: (gdm_verify_user),
 	(gdm_verify_setup_user), (gdm_verify_setup_env):
 	* daemon/verify-pam.c: (audit_fail_login), (gdm_verify_user),
